--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,10 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-navbar>
-</ion-header>
-
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+    <div text-center class="abs">
+        <h1>Plateforme de gestion </h1>
+        <p>
+            <strong>de tontine</strong> <br>
+            <br>
+            <ion-spinner name="dots"></ion-spinner>
+        </p>
+    </div>
 </ion-content>
