--- a/src/pages/accueil/accueil.html
+++ b/src/pages/accueil/accueil.html
@@ -20,6 +20,11 @@
             <ion-searchbar [(ngModel)]="dataProvider.userData.currentSearch" mode="wp" placeholder="rechercher">
             </ion-searchbar>
         </ion-buttons>
+        <ion-buttons end>
+            <button ion-button icon-only (click)="presentAccount($event)">
+            <ion-icon name="md-more"></ion-icon>
+            </button>
+        </ion-buttons>
     </ion-navbar>
 
 </ion-header>
@@ -31,20 +36,23 @@
         <ion-content no-padding no-margin class="menus" [ngClass]="{isOpen:isOpen}" *ngIf='isOpen'>
             <ion-list no-lines>
                 <ion-item *ngFor="let menu of menus" (click)="toLink(menu)" [ngClass]="{active:dataProvider.userData.currentMenu == menu}">
-                    {{menu.libelle}}
+                    <ion-icon [name]="menu.icon" color="primary"></ion-icon> &nbsp; {{menu.libelle}}
                 </ion-item>
             </ion-list>
             <hr>
             <ion-list no-lines>
                 <ion-item *ngFor="let menu of menusStats" (click)="toLink(menu)" [ngClass]="{active:dataProvider.userData.currentMenu == menu}">
-                    {{menu.libelle}}
+                    <ion-icon [name]="menu.icon" color="primary"></ion-icon> &nbsp; {{menu.libelle}}
                 </ion-item>
             </ion-list>
             <ion-footer no-border>
                 <ion-toolbar>
-                    <ion-title (click)="openSettings()" style="cursor: pointer">
+                    <!--  <ion-title (click)="openSettings()" style="cursor: pointer">
                         <ion-icon name="settings"></ion-icon>
                         Paramètrage
+                    </ion-title> -->
+                    <ion-title *ngIf="!onLine" class="onLine">
+                        <ion-icon name="warning"></ion-icon> Pas de connexion
                     </ion-title>
                 </ion-toolbar>
             </ion-footer>
@@ -56,6 +64,7 @@
                 <li *ngFor="let bread of dataProvider.userData.currentMenu?.breadcrumbs" (click)="toBread(bread)" [ngClass]="{active:dataProvider.userData.code == bread.code}"><a>{{bread.libelle}}</a></li>
             </ul>
             <div [ngSwitch]="dataProvider.userData.code">
+                <produit *ngSwitchCase="'PRODUITS'"></produit>
                 <client *ngSwitchCase="'CLIENTS'"></client>
                 <tontine *ngSwitchCase="'TONTINES'"></tontine>
                 <create-tontine *ngSwitchCase="'CREATE_TONTINE'"></create-tontine>
@@ -76,13 +85,17 @@
     </ion-split-pane>
     <div *ngIf="!isEnabled">
         <div [ngSwitch]="dataProvider.userData.code">
+            <produit *ngSwitchCase="'PRODUITS'"></produit>
             <client *ngSwitchCase="'CLIENTS'"></client>
             <tontine *ngSwitchCase="'TONTINES'"></tontine>
             <create-tontine *ngSwitchCase="'CREATE_TONTINE'"></create-tontine>
             <mise *ngSwitchCase="'MISE'"></mise>
             <!-- <tontine *ngSwitchCase="'RETRAIT_TONTINE'"></tontine> -->
             <epargne *ngSwitchCase="'EPARGNE'"></epargne>
-            <create-epargne *ngSwitchCase="'CREATE_EPARGNE'"></create-epargne>
+            <div margin *ngSwitchCase="'CREATE_EPARGNE'">
+                <create-epargne>
+                </create-epargne>
+            </div>
             <depot-epargne *ngSwitchCase="'DEPOT_EPARGNE'"></depot-epargne>
             <retrait-epargne *ngSwitchCase="'RETRAIT_EPARGNE'"></retrait-epargne>
             <stats *ngSwitchCase="'STATS'"></stats>
