--- a/src/pages/accueil/accueil.html
+++ b/src/pages/accueil/accueil.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-    <ion-navbar>
+    <ion-navbar color='primary'>
         <ion-buttons left *ngIf="isEnabled">
             <button ion-button icon-only (click)="toggle()">
           <ion-icon name="menu"></ion-icon>
