--- a/src/pages/faire-mise/faire-mise.html
+++ b/src/pages/faire-mise/faire-mise.html
@@ -22,8 +22,8 @@
     <p>
         Le montant souscrit pour ce compte: <em>{{compte?.montantSouscritTontine | currency:'XOF':true:'2.0'}}</em> <br> Le nombre de mise: {{compte.miseTontine}}
         <br>
-        <span *nfIf="compte.produit && compte.produit.nbreMiseTotal">
-        Nombre de mise restant : {{compte.produit.nbreMiseTotal - compte.miseTontine}}
+        <span *ngIf="compte.produit && compte.produit.nbreMiseTotal">
+        Nombre de mise restant : {{compte.produit.nbreMiseTotal - compte.miseTontine < 0?0:compte.produit.nbreMiseTotal - compte.miseTontine}}
         </span>
         <br> Le client a faire une avance sur ce compte? <strong>{{compte.avanceTontine?'Oui':'Non'}}</strong><br>
         <span *ngIf="compte.avanceTontine && compte.avanceDate">
@@ -61,7 +61,7 @@
             {{(nbreMise.size * (compte.montantSouscritTontine || 0)) | currency:'XOF':true:'2.0'}} à payer
         </ion-title>
         <ion-buttons end>
-            <button ion-button (click)="save()" [disabled]="isSaving || nbreMise.size">
+            <button ion-button (click)="save()" [disabled]="isSaving || !nbreMise.size">
         <ion-spinner *ngIf="isSaving"></ion-spinner> Enregistrer
       </button>
         </ion-buttons>
