--- a/src/pages/add-client/add-client.html
+++ b/src/pages/add-client/add-client.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-    <ion-navbar>
+    <ion-navbar color="primary">
         <ion-title>{{client.id ?"Modification d'un client":"Ajout d'un client"}}</ion-title>
         <ion-buttons end>
             <button ion-button icon-only (click)="close()">
