--- a/src/pages/create-produit/create-produit.html
+++ b/src/pages/create-produit/create-produit.html
@@ -1,6 +1,6 @@
 <ion-header>
 
-    <ion-navbar>
+    <ion-navbar color="primary">
         <ion-title>{{produit.id?"Modifiation d'un produit":"Ajout d'un produit"}}</ion-title>
         <ion-buttons end>
             <button ion-button icon-only (click)="close()">
