--- a/src/pages/wrapper/wrapper.html
+++ b/src/pages/wrapper/wrapper.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-    <ion-navbar>
+    <ion-navbar color="primary">
         <ion-title *ngIf="type == 'CreateTontineComponent'">
             Modifier le compte tontine
         </ion-title>
