--- a/src/pages/accueil/accueil.html
+++ b/src/pages/accueil/accueil.html
@@ -4,7 +4,7 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
+<ion-header no-border>
 
     <ion-navbar color='primary'>
         <ion-buttons left *ngIf="isEnabled">
@@ -47,10 +47,12 @@
             </ion-list>
             <ion-footer no-border>
                 <ion-toolbar>
-                    <!--  <ion-title (click)="openSettings()" style="cursor: pointer">
-                        <ion-icon name="settings"></ion-icon>
-                        Paramètrage
-                    </ion-title> -->
+                    <ion-buttons left (click)="openSettings()" style="cursor: pointer">
+                        <button ion-button>
+                            <ion-icon name="settings"></ion-icon>
+                            Paramètrage
+                        </button>
+                    </ion-buttons>
                     <ion-title *ngIf="!onLine" class="onLine">
                         <ion-icon name="warning"></ion-icon> Pas de connexion
                     </ion-title>
