--- a/src/pages/accueil/accueil.html
+++ b/src/pages/accueil/accueil.html
@@ -69,6 +69,7 @@
                 <produit *ngSwitchCase="'PRODUITS'"></produit>
                 <client *ngSwitchCase="'CLIENTS'"></client>
                 <tontine *ngSwitchCase="'TONTINES'"></tontine>
+                <recettes *ngSwitchCase="'RECETTES'"></recettes>
                 <create-tontine *ngSwitchCase="'CREATE_TONTINE'"></create-tontine>
                 <mise *ngSwitchCase="'MISE'"></mise>
                 <!-- <tontine *ngSwitchCase="'RETRAIT_TONTINE'"></tontine> -->
@@ -94,6 +95,7 @@
             <mise *ngSwitchCase="'MISE'"></mise>
             <!-- <tontine *ngSwitchCase="'RETRAIT_TONTINE'"></tontine> -->
             <epargne *ngSwitchCase="'EPARGNE'"></epargne>
+            <recettes *ngSwitchCase="'RECETTES'"></recettes>
             <div margin *ngSwitchCase="'CREATE_EPARGNE'">
                 <create-epargne>
                 </create-epargne>
