--- a/src/pages/mises/mises.html
+++ b/src/pages/mises/mises.html
@@ -44,3 +44,12 @@
         </table>
     </div>
 </ion-content>
+<ion-footer no-border>
+    <ion-navbar>
+        <ion-title>
+            <span>
+                Au total {{montantTotalTontine| currency:'XOF':true:'2.0'}} déposé par ce client sur son compte
+            </span>
+        </ion-title>
+    </ion-navbar>
+</ion-footer>
