--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,6 @@
 
     <!-- cordova.js required for cordova apps (remove if not needed) -->
     <script src="cordova.js"></script>
-
     <!-- un-comment this code to enable service worker
   <script>
     if ('serviceWorker' in navigator) {
@@ -47,7 +46,8 @@
     <!-- The main bundle js is generated during the build process -->
     <script src="build/main.js"></script>
     <script src="assets/Chart.min.js"></script>
-
+    <script src='assets/pdfmake.min.js'></script>
+    <script src='assets/vfs_fonts.js'></script>
 </body>
 
 </html>
