traitement sur le credit, produit credit, compte credit

--- a/src/pages/accueil/accueil.html
+++ b/src/pages/accueil/accueil.html
@@ -78,6 +78,11 @@
                 <mise *ngSwitchCase="'MISE'"></mise>
                 <!-- <tontine *ngSwitchCase="'RETRAIT_TONTINE'"></tontine> -->
                 <epargne *ngSwitchCase="'EPARGNE'"></epargne>
+                <credit *ngSwitchCase="'CREDIT'"></credit>
+                <div margin *ngSwitchCase="'CREATE_CREDIT'">
+                    <create-credit>
+                    </create-credit>
+                </div>
                 <div margin *ngSwitchCase="'CREATE_EPARGNE'">
                     <create-epargne>
                     </create-epargne>
@@ -99,6 +104,11 @@
             <mise *ngSwitchCase="'MISE'"></mise>
             <!-- <tontine *ngSwitchCase="'RETRAIT_TONTINE'"></tontine> -->
             <epargne *ngSwitchCase="'EPARGNE'"></epargne>
+            <credit *ngSwitchCase="'CREDIT'"></credit>
+            <div margin *ngSwitchCase="'CREATE_CREDIT'">
+                <create-credit>
+                </create-credit>
+            </div>
             <recettes *ngSwitchCase="'RECETTES'"></recettes>
             <div margin *ngSwitchCase="'CREATE_EPARGNE'">
                 <create-epargne>
