frais douverture de compte debut

--- a/src/pages/create-produit/create-produit.html
+++ b/src/pages/create-produit/create-produit.html
@@ -87,6 +87,7 @@
                 <ion-option value="JOURNALIERE"> Journalière</ion-option>
                 <ion-option value="HEBDOMADAIRE"> Hebdomadaire</ion-option>
                 <ion-option value="MENSUELLE"> Mensuelle</ion-option>
+                <ion-option value="TRIMESTRIELLE"> Trimestrielle</ion-option>
                 <ion-option value="SEMESTRIELLE"> Semestrielle</ion-option>
                 <ion-option value="ANNUELLE"> Annuelle</ion-option>
             </ion-select>
