les autres etats

--- a/src/pages/accueil/accueil.html
+++ b/src/pages/accueil/accueil.html
@@ -91,6 +91,7 @@
                 <retrait-epargne *ngSwitchCase="'RETRAIT_EPARGNE'"></retrait-epargne>
                 <stats *ngSwitchCase="'STATS'"></stats>
                 <audits *ngSwitchCase="'AUDITS'"></audits>
+                <audits1 *ngSwitchCase="'AUDITS1'"></audits1>
                 <board *ngSwitchDefault></board>
             </div>
         </ion-content>
@@ -118,6 +119,7 @@
             <retrait-epargne *ngSwitchCase="'RETRAIT_EPARGNE'"></retrait-epargne>
             <stats *ngSwitchCase="'STATS'"></stats>
             <audits *ngSwitchCase="'AUDITS'"></audits>
+            <audits1 *ngSwitchCase="'AUDITS1'"></audits1>
             <board *ngSwitchDefault></board>
         </div>
     </div>
